# pylarid

./: .gitignore  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
cmake/: cmake_uninstall.cmake.in
cmake/Modules/: Findnifti1.cmake  Findnifti2.cmake
debug/: debug_dset.py  debug_io.py  run.c
src/: datatype.c  dset.c  dset.cpp  dset.h  io.c  larid.c  larid.h  morder.c  pylarid.cpp  pylarid.h  rescale.c  util.c
test/: __init__.py  __main__.py  test_cast.py  test_dset.py  test_io.py  test_larid.py  test_morder.py  test_rescale.py
tests/: test_new.py
